--- a/product-list.html
+++ b/product-list.html
@@ -232,41 +232,26 @@
 									<thead>
 										<tr>
 										  <th>Name</th>
-										  <th>Position</th>
-										  <th>Office</th>
-										  <th>Age</th>
-										  <th>Start date</th>
-										  <th>Salary</th>
+										  <th>Image</th>
+										  <th>Short Desc</th>
+										  <th>Long Desc</th>
+										  <th>Club Price</th>
+										  <th>Original Price</th>
+										  <th>Category</th>
+										  <th>Action</th>
 										</tr>
 									</thead>
-									<tbody>
+									<tbody class="dv-get-all:orders:stock">
 										<tr>
-										  <td>Tiger Nixon</td>
-										  <td>System Architect</td>
-										  <td>Edinburgh</td>
-										  <td>61</td>
-										  <td>2011/04/25</td>
-										  <td>$320,800</td>
-                      <td><button type="" class="btn btn-theme">Item</button></td>
-										</tr>
-
-										<tr>
-										  <td>Sakura Yamamoto</td>
-										  <td>Support Engineer</td>
-										  <td>Tokyo</td>
-										  <td>37</td>
-										  <td>2009/08/19</td>
-										  <td>$139,575</td>
-                      <td><button type="" class="btn btn-theme">Item</button></td>
-										</tr>
-										<tr>
-										  <td>Thor Walton</td>
-										  <td>Developer</td>
-										  <td>New York</td>
-										  <td>61</td>
-										  <td>2013/08/11</td>
-										  <td>$98,540</td>
-                      <td><button type="" class="btn btn-theme">Item</button></td>
+										  <td class="var-name">...</td>
+										  <td><img src="" class="var-image" width="30" height="30"></td>
+										  <td class="var-short_desc" >...</td>
+										  <td class="var-long_des">...</td>
+										  <td class="var-clubPrice">...</td>
+										  <td class="var-origPrice">...</td>
+										  <td class="var-category-name">...</td>
+										  <td><button class="btn btn-theme">Update</button></td>
+                   
 										</tr>
 									</tbody>
 								</table>
@@ -289,6 +274,8 @@
 		</footer><!-- End of Footer -->
 
         <!-- Loading Third Party Scripts -->
+
+<script src="http://admin.bumpyshoppersclub.com/js/devless-sdk.js" class="devless-connection" devless-con-token="2d490ab1264453d3cb2718d699cdfd0a"></script>
 
 		<script src="third-party/jquery/jquery.min.js"></script>
 		<script src="third-party/easing/js/jquery.easings.min.js"></script>
