--- a/add-category.html
+++ b/add-category.html
@@ -224,7 +224,9 @@
 					</div>
 				</div>
 			</section><!-- End of Page Header -->
-
+			<div class="dv-notify"></div>
+			<div class="dv-notify-success alert alert-success" style="display: none">Category saved successfully</div>
+			<div class="dv-notify-failed alert alert-danger" style="display: none">Category failed to save</div>
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm-12">
@@ -234,34 +236,18 @@
 
 							<!-- Form with Tooltip Alerts -->
 
-							<form id="tooltipForm" method="post" action="form-tooltip-alerts.html#" class="row form-theme">
-								<div class="col-sm-12">
-									<div class="form-group">
+							<form    class="dv-add-oneto:orders:category">
 										<label class="control-label">Category Name</label>
-										<input type="text" class="form-control" name="firstName"/>
-									</div>
-								</div>
-								<div class="col-sm-12">
-									<div class="form-group">
+										<input type="text" class="form-control" id="cat_name" name="name" placeholder="Please enter category name" />
+										<label class="control-label" id="cat_image">Category Image</label>
+              							<input type="file" class="form-control" name="image">
 										<label class="control-label">Description</label>
-										<textarea class="form-control" name="message" rows="4" ></textarea>
-									</div>
-								</div>
-								<div class="col-sm-12">
-               <form>
-              <label class="control-label">Category Image</label>
-                       <input type="file" class="btn btn-success fileinput-button dz-clickable">
+										<textarea class="form-control" name="desc" id="cat_desc" rows="4" ></textarea>
+									
 
-                      </button>
-                    <br>
-              </form>
-
-								</div>
-								<div class="col-sm-12">
-									<div class="form-group">
-										<button type="submit" class="btn btn-theme">Submit</button>
-									</div>
-								</div>
+                       					<br>
+										<button type="submit" class="btn btn-default" >Submit</button>
+						
 							</form><!-- End of Form with Tooltip Alerts -->
 						</div>
 					</div>
@@ -269,15 +255,8 @@
 			</div>
 		</div><!-- End of Page Content -->
 
-		<!-- Footer -->
 
-		<footer class="footer container-fluid">
-			<div class="row">
-				<div class="col-md-12 ">
-					<p class="letter-spacing-1">©2017 Bumpy shoppers - East-Legon - Tel. +0233 000000</p>
-				</div>
-			</div>
-		</footer><!-- End of Footer -->
+<script src="http://admin.bumpyshoppersclub.com/js/devless-sdk.js" class="devless-connection" devless-con-token="2d490ab1264453d3cb2718d699cdfd0a"></script>
 
         <!-- Loading Third Party Scripts -->
 
@@ -368,17 +347,18 @@
 
         <!-- Google Analytics Tracking -->
 
-        <script>
-
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-58677854-6', 'auto');
-		ga('send', 'pageview');
-
-        </script>
+<script type="text/javascript">
+	data = {};
+	data['name'] = document.getElementById('cat_name').value;
+	data['image'] = document.getElementById('cat_image').value;
+	data['desc'] = document.getElementById('cat_desc').value;
+	function addCategory(){
+		SDK.addData('orders','category', data, function(){
+			document.getElementsByClassName('dv-notify').value = 'Success'; 
+		});	
+	}
+	
+</script>
 
     </body>
 </html>
