--- a/add-product.html
+++ b/add-product.html
@@ -235,7 +235,7 @@
 					</div>
 				</div>
 			</section><!-- End of Page Header -->
-
+			<div class="dv-notify"></div>
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm-12">
@@ -245,61 +245,26 @@
 
 							<!-- Form with Tooltip Alerts -->
 
-							<form id="tooltipForm" method="post" action="form-tooltip-alerts.html#" class="row form-theme">
-								<div class="col-sm-6">
-									<div class="form-group">
+							<form class=" dv-add-oneto:orders:stock">
 										<label class="control-label">Select a Category</label>
-                     <select class="form-control">
+                     <select class="form-control" name="orders_category_id">
                         <option value="0" selected>All Categories</option>
                         <option value="1">Category one</option>
                         <option value="2">Category two</option>
                         <option value="3">Category three</option>
                         <option value="4">Category four</option>
                     </select>
-									</div>
-								</div>
-								<div class="col-sm-6">
-									<div class="form-group">
 										<label class="control-label">Product Name</label>
-										<input type="text" class="form-control" name="lastName"/>
-									</div>
-								</div>
-								<div class="col-sm-12">
-									<div class="form-group">
+										<input type="text" class="form-control" name="name"/>
 										<label class="control-label">Short description</label>
-                    <textarea class="form-control" name="message" rows="4" ></textarea>
-									</div>
-								</div>
-								<div class="col-sm-12">
-									<div class="form-group">
+                    <textarea class="form-control" name="short_desc" rows="4" ></textarea>
 										<label class="control-label">Long description</label>
-                    <textarea class="form-control" name="message" rows="4" ></textarea>
-									</div>
-								</div>
-								<div class="col-sm-6">
-									<div class="form-group">
+                    <textarea class="form-control" name="long_desc" rows="4" ></textarea>
 										<label class="control-label">Club price</label>
-                    <input type="text" class="form-control" name="lastName"/>
-									</div>
-								</div>
-                <div class="col-sm-6">
-                  <div class="form-group">
+                    <input type="text" class="form-control"  name="clubPrice" />
+								
                     <label class="control-label">Original price</label>
-                    <input type="text" class="form-control" name="lastName"/>
-                  </div>
-                </div>
-								<div class="col-sm-12">
-									  <label class="control-label">Product Image</label>
-                       <input type="file" class="btn btn-success fileinput-button dz-clickable">
-
-                      </button>
-                    <br>
-								</div>
-								<div class="col-sm-12">
-									<div class="form-group">
-										<button type="submit" class="btn btn-theme">Submit</button>
-									</div>
-								</div>
+                   				<button type="submit" class="btn btn-theme">Submit</button>
 							</form><!-- End of Form with Tooltip Alerts -->
 						</div>
 					</div>
@@ -351,17 +316,10 @@
 
         <!-- Google Analytics Tracking -->
 
-        <script>
-
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-58677854-6', 'auto');
-		ga('send', 'pageview');
-
-        </script>
-
+       <script type="text/javascript">
+       		// Vue({
+       		// 	el:"#cats"
+       		// })
+       </script>
     </body>
 </html>
