--- a/add-product.html
+++ b/add-product.html
@@ -86,7 +86,7 @@
 								<!-- Logo -->
 
 								<a class="logo" href="index.html">
-									<img alt="image" src="images/bumpy-admin-bumpy-admin-logo.png" />
+									<img alt="image" src="images/bumpy-admin-logo.png" />
 								</a><!-- End of Logo -->
 							</div>
 
