--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								</a>
 								<!-- Logo -->
 								<a class="logo" href="index.html">
-									<img alt="image" src="images/bumpy-admin-bumpy-admin-logo.png" />
+									<img alt="image" src="images/bumpy-admin-logo.png" />
 								</a><!-- End of Logo -->
 							</div>
 
