removed sidebar links

--- a/product-list.html
+++ b/product-list.html
@@ -109,26 +109,7 @@
 
                                 </ul><!-- End of Left Aligned Icons -->
 
-								<!-- Right Aligned Icons -->
 
-								<ul class="nav navbar-nav navbar-right">
-
-									<!-- Search Icon -->
-
-									<li class="nav-search">
-										<a href="tables-datatables.html#" class="search-box search-box-trigger"><i class="search-icon pe-7s-search"></i><i class="search-close pe-7s-close"></i></a>
-									</li><!-- End of Search Icon -->
-
-									<!-- Chat/Settings Trigger -->
-
-									<li class="nav-chat">
-										<a href="tables-datatables.html#" class="chat-trigger"><div class="notification-dot"><span class="pulse"></span><span class="point"></span></div><i class="pe-7s-comment"></i></a>
-									</li><!-- End of Chat/Settings Trigger -->
-
-									<!-- Logout Button -->
-
-
-								</ul><!-- End of Right Aligned Icons -->
                             </div>
                         </div>
                     </div>
@@ -177,18 +158,17 @@
                   <li class="with-dropdown">
                     <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
-                      <li><a href="add-special-offer.html">Add special offer</a></li>
+                      <li><a href="add-special-offers.html">Add special offer</a></li>
                       <li><a href="special-offers-list.html">List of Special offers </a></li>
                     </ul>
                   </li>
 
-                  <li class="with-dropdown">
-                    <a class="menu-dropdown-link with-badge" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-grid"></i>Tables <span class="dropdown-icon"></span><span class="menu-badge bg-orange">2</span></a>
-
-                  </li>
-
-                  <li>
-                    <a class="with-badge" href="calendar.html"><i class="icon-calendar"></i> Calendar <span class="menu-badge bg-dark-green">New</span></a>
+                 <li class="with-dropdown">
+                    <a class="menu-dropdown-link with-badge" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-grid"></i>Orders<span class="dropdown-icon"></span><span class="menu-badge bg-orange">2</span></a>
+                    <ul class="menu-dropdown collapse">
+                      <li><a href="pending-orders.html">Pending orders</a></li>
+                      <li><a href="processed-orders.html">processed orders</a></li>
+                    </ul>
                   </li>
 
 
