--- a/special-offers-list.html
+++ b/special-offers-list.html
@@ -117,25 +117,6 @@
 
                                 </ul><!-- End of Left Aligned Icons -->
 
-                                <!-- Right Aligned Icons -->
-
-                                <ul class="nav navbar-nav navbar-right">
-
-                                    <!-- Search Icon -->
-
-                                    <li class="nav-search">
-                                        <a href="tables-datatables.html#" class="search-box search-box-trigger"><i class="search-icon pe-7s-search"></i><i class="search-close pe-7s-close"></i></a>
-                                    </li><!-- End of Search Icon -->
-
-                                    <!-- Chat/Settings Trigger -->
-
-                                    <li class="nav-chat">
-                                        <a href="tables-datatables.html#" class="chat-trigger"><div class="notification-dot"><span class="pulse"></span><span class="point"></span></div><i class="pe-7s-comment"></i></a>
-                                    </li><!-- End of Chat/Settings Trigger -->
-
-                                    <!-- Logout Button -->
-
-                                </ul><!-- End of Right Aligned Icons -->
                             </div>
                         </div>
                     </div>
@@ -192,7 +173,7 @@
                   <li class="with-dropdown">
                     <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
-                      <li><a href="add-special-offer.html">Add special offer</a></li>
+                      <li><a href="add-special-offers.html">Add special offer</a></li>
                       <li><a href="special-offers-list.html">List of Special offers </a></li>
                     </ul>
                   </li>
@@ -204,9 +185,6 @@
                     </ul>
                   </li>
 
-                  <li>
-                    <a class="with-badge" href="calendar.html"><i class="icon-calendar"></i> Calendar <span class="menu-badge bg-dark-green">New</span></a>
-                  </li>
 
 
                 </ul>
