--- a/product-list.html
+++ b/product-list.html
@@ -147,21 +147,24 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Sub categories<span class="dropdown-icon"></span></a>
+                    <ul class="menu-dropdown collapse">
+                      <li><a href="add-sub-category.html">Add sub categories</a></li>
+                      <li><a href="sub-category-list.html">List of sub categories</a></li>
+
+                    </ul>
+                  </li>
+                  <li class="with-dropdown">
                     <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
 
                       <li><a href="add-product.html">Add Product </a></li>
                       <li><a href="product-list.html">List of Products </a></li>
+                      <li><a href="special-offers-list.html">List of Special offers </a></li>
 
                     </ul>
                   </li>
-                  <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
-                    <ul class="menu-dropdown collapse">
-                      <li><a href="add-special-offers.html">Add special offer</a></li>
-                      <li><a href="special-offers-list.html">List of Special offers </a></li>
-                    </ul>
-                  </li>
+
 
                  <li class="with-dropdown">
                     <a class="menu-dropdown-link with-badge" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-grid"></i>Orders<span class="dropdown-icon"></span><span class="menu-badge bg-orange">2</span></a>
