--- a/add-product.html
+++ b/add-product.html
@@ -227,7 +227,8 @@
                      	</div>
                     </select>
 										<label class="control-label">Product Name</label>
-										<input type="text" class="form-control" id="name"/>
+                    <input type="text" class="form-control" id="name"/>
+										<input type="hidden" class="form-control" id="image"/>
 										<label class="control-label">Short description</label>
                     <textarea class="form-control" id="short_desc" rows="4" ></textarea>
 										<label class="control-label">Long description</label>
@@ -239,9 +240,9 @@
                     <input type="number" class="form-control"  id="origPrice" />
 
                       <label class="control-label">Image</label>
-                    <input type="file" class="form-control"  id="image" />
+                    <input type="file" class="form-control"  id="image_url" />
 
-                    <label class="control-label">Mark as Special Offer</label>	
+                    <label class="control-label">Mark as Special Offer</label>
                      <select class="form-control cat" id="on_offer">
                         <option value="0">No</option>
                         <option value="1">Yes</option>
@@ -290,23 +291,25 @@ function setImage() {
 	function getBase64(file) {
    var reader = new FileReader();
    reader.readAsDataURL(file);
-   reader.onload = function () {
-     var image = reader.result;
-     console.log(image);
-   };
+     reader.addEventListener('load', function(){
+          var image = reader.result;
+          document.getElementById('image').value = image;
+          console.log(image);
+
+      }, false)
    reader.onerror = function (error) {
      console.log('Error: ', error);
    };
 }
 
-	var file = document.querySelector('#image').files[0];
+	var file = document.querySelector('#image_url').files[0];
 	console.log("file", file);
 	getBase64(file); // prints the base64 string
-  
-  
+
+
 }
 
-document.getElementById("image").addEventListener("change", setImage);
+document.getElementById("image_url").addEventListener("change", setImage);
 
 
 
@@ -318,6 +321,7 @@ document.getElementById("image").addEventListener("change", setImage);
 
 		for(var i= 0; i < keys.length; i++) {
 			data[keys[i]] = document.getElementById(keys[i]).value;
+      console.log(data);
 		}
 		SDK.addData('orders', 'stock', data, function(resp){
 			if(resp.status_code == 609 )
