--- a/add-category.html
+++ b/add-category.html
@@ -7,9 +7,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Dashboard | Add category</title>
-		<meta name="description" content="Premium HTML5 Template">
-		<meta name="keywords" content=" HTML5, Premium Template, Nucleus Theme">
-		<meta name="author" content="Amazyne Themes">
+		<meta name="description" content="Bumpy shoppers">
+		<meta name="keywords" content="Bumpy shoppers">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 		<!-- Favicon -->
